test: add unit tests for CachedDynamicGlamAccountFactory, improve mutation coverage
- Covers dynamic-account name routing to correct metas, rejection of unknown names, and identity-based caching.
- Adds tests for interaction with GlamVaultAccounts and verifies cache behavior across equal configurations.
- Raises mutation coverage for `CachedDynamicGlamAccountFactory` by validating configuration handling and proper rejection paths.